# sql-studio

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  package-lock.json  package.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
desktop/: package.json
desktop/src/: app.css  app.js  index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs  startup_log.rs
desktop/test/: autocomplete-qualified.mjs  console-session.mjs  e2e.js  mock-dbadmin.js  pagination.mjs  project.mjs  tauri.e2e.conf.json  unit.mjs
docs/: FAQ.md  README.md  architecture.md  configuration.md  development.md  getting-started.md  plugins.md  releasing.md  testing.md  third-party.md
docs/console-grid-enhancements/: README.md
docs/console-multi-sql/: README.md
docs/execution-workflow/: README.md  implementation-plan.md  technical-design.md
docs/sql-autocomplete-enhancements/: README.md
docs/windows-desktop/: README.md  技术方案.md
extension/: app.css  app.html  app.js  background.js  default-envs.json  manifest.json
extension/icons/: gen-icons.ps1
extension/lib/: about-dialog.mjs  actions.js  api.js  app-events.mjs  console-draft.mjs  console-query.mjs  console-workspace.mjs  crypto.js  csv-save.mjs  csv.mjs  grid.mjs  icons.mjs  query-row-limit.mjs  sql-editor.mjs  store.js  table-view.mjs
src/: app.css  app.js  index.html  theme-bootstrap.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: background.rs  lifecycle.rs  main.rs  mcp.rs  mcp_tools.rs  scheduler.rs  server.rs  services.rs  startup_diagnostics.rs  startup_log.rs  tray.rs
src-tauri/src/archery/: mod.rs
src-tauri/src/notifications/: commands.rs  domain.rs  mod.rs  repository.rs  service.rs
src-tauri/src/plugins/: dingtalk.rs  message_builder.rs  mod.rs
src-tauri/src/storage/: migrations.rs  mod.rs  workflow_db.rs
src-tauri/src/workflows/: commands.rs  domain.rs  execution.rs  execution_models.rs  execution_repository.rs  execution_service.rs  mod.rs  plugin_execution.rs  plugin_registry.rs  repository.rs  schedule_commands.rs  schedule_domain.rs  schedule_repository.rs  validation.rs
src/lib/: about-dialog.mjs  api.js  app-events.mjs  console-execution.mjs  console-menu-view.mjs  console-query.mjs  console-rename.mjs  console-result-view.mjs  console-session.mjs  csv-export-actions.mjs  csv-save.mjs  db-context.mjs  execution-detail.mjs  export-service.mjs  host.mjs  store.js  (+19 more)
test/: autocomplete-qualified.mjs  console-session.mjs  e2e.js  execution-detail.mjs  message-center.mjs  mock-archery-cluster.js  mock-archery.js  mock-environments.json  native-lifecycle.mjs  pagination.mjs  project.mjs  resource-tree.mjs  store.mjs  table-empty-state.mjs  tauri.e2e.conf.json  theme.mjs  unit.mjs  workflow-autocomplete.mjs  workflow-manager-race.mjs  workflow-schedule.mjs
(+12 files in other folders)
