[package]
name = "sql-studio"
version = "1.0.0"
description = "基于 Archery 接口的可视化 SQL 客户端（浏览器模式）"
edition = "2021"
license = "MIT"
authors = ["SQL Studio contributors"]
homepage = "https://github.com/leile-xyz/sql-studio"
repository = "https://github.com/leile-xyz/sql-studio"
publish = false

[dependencies]
axum = "0.8"
dirs = "6"
keyring = { version = "3", features = ["windows-native"] }
mime_guess = "2"
open = "5"
rand = "0.9"
reqwest = { version = "0.12", features = ["cookies", "json"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
url = "2"

[target.'cfg(windows)'.dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
tao = "0.35"
tray-icon = { version = "0.24", default-features = false }

[profile.release]
strip = true
lto = true
codegen-units = 1
